#aux_source_directory(. SRC_LIST)
#set(SRC_LIST mprpcapplication.cc mprpcconfig.cc rpcheader.pb.cc rpcprovider.cc mprpcchannel.cc mprpccontroller.cc logger.cc mpnacosconfig.cc)
file(GLOB SRC_LIST ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
add_library(mprpc ${SRC_LIST})
include_directories(/usr/local/include/nacos/)
target_link_libraries(mprpc muduo_net muduo_base pthread nacos-cli)
#target_link_libraries(provider mprpc protobuf)